added Layer Conditions

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,6 +5,7 @@
 
 section ul ul {
 	border-left: 1px dashed black;
+	padding-left:15px;
 }
 section ul { list-style-type:none;}
 section ul li:before { content: "\25BA" " "; }
