changed table styling and added front page description

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,8 +21,9 @@
 }
 
 body {
-	font-family:"Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, sans-serif;
 	background: #fff;
+	color: #222;
 	background-image: none;
 }
 
@@ -58,6 +59,15 @@ section {
 	color: #707070;
 }
 
+th {
+  text-align:left;
+  padding:5px 10px;
+  border-bottom:1px solid #e5e5e5;
+  color: #aaa;
+  font-weight: normal;
+  font-style: italic;
+}
+
 td {
   text-align:left;
   padding:5px 10px;
@@ -66,6 +76,10 @@ td {
 
   &:first-child {
     border-left: 1px solid #e5e5e5;
+  }
+
+  &:nth-child(2) {
+	  font-weight: bold;
   }
 }
 
@@ -145,11 +159,10 @@ header {
 }
 
 #banner .button {
-	border-color: #005cae;
+	border-color: #bbb;
 
   &:hover {
-    background: linear-gradient(rgba(#005cae,1.0), rgba(#005cae,0.75));
-    background-color: #ddd;
+    background: linear-gradient(rgba(#005cae,0.6), rgba(#005cae,0.8));
   }
 }
 
@@ -168,6 +181,3 @@ header {
 	min-width: 450px;
 	margin: 2%;
 }
-// .section-block-full:nth-child(2) {
-// 	float: right;
-// }
