reworked css style

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,7 +1,15 @@
 ---
 ---
 
-@import "{{ site.theme }}";
+/*
+Original:
+Leap Day for GitHub Pages
+by Matt Graham
+*/
+
+@import "normalize";
+@import "fonts";
+@import "rouge-base16-dark";
 
 /* latin-ext */
 @font-face {
@@ -21,42 +29,117 @@
 }
 
 body {
+  font:14px/22px;
+  font-weight:300;
+  margin: 0px;
+  padding:0px 0 20px 0px;
+
 	font-family:  "Helvetica Neue", Helvetica, Arial, sans-serif;
 	background: #fff;
 	color: #222;
 	background-image: none;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  color:#333;
+  margin:0 0 10px;
+}
+
+p, ul, ol, table, pre, dl {
+  margin:0 0 20px;
+}
+
+h1, h2, h3 {
+  line-height:1.1;
+}
+
+h1 {
+  font-size:28px;
+}
+
+h2 {
+  font-size: 24px;
+  color:#393939;
+}
+
+h3, h4, h5, h6 {
+  color:#666666;
+}
+
+h3 {
+  font-size: 18px;
+  line-height: 24px;
+}
+
+a {
+  color:#005cae;
+  font-weight:400;
+  text-decoration:none;
+}
+
+a small {
+  font-size:11px;
+  color:#666;
+  margin-top:-0.6em;
+  display:block;
+}
+
+ul{
+  list-style-image:url('../images/bullet.png');
+}
+
+strong {
+  font-weight: bold;
+  color: #333;
+}
+
+.wrapper {
+	width: auto;
+	max-width: 1500px;
+	min-width: 470px;
+  margin:0 auto;
+  position:relative;
+}
+
+section img {
+  max-width: 100%;
+}
+
+blockquote {
+  border-left:1px solid #ffcc00;
+  margin:0;
+  padding:0 0 0 20px;
+  font-style:italic;
+}
+
 code {
-	font-family: Source Code Pro;
+  font-family: Source Code Pro, 'Lucida Sans', Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
+  font-size:13px;
+  color:#efefef;
+  text-shadow: 0px 1px 0px #000;
+  margin: 0 4px;
+  padding: 2px 6px;
+  background: #333;
+  border-radius: 2px;
 }
 
-section ul ul {
-	border-left: 2px dotted #707070;
-	padding-left:20px;
+pre {
+  padding:8px 15px;
+  background: #333333;
+  border-radius: 3px;
+  border:1px solid #c7c7c7;
+  overflow: auto;
+  overflow-y: hidden;
+
+  code {
+    margin: 0px;
+    padding: 0px;
+  }
 }
 
-section ul {
-	list-style-type: none;
-	list-style-image: none;
-}
-section ul li:before {
-	content: "» ";
-}
-
-section {
-	border: none;
-	min-width: 590px;
-	width: 70%;
-	left: 20%;
-	background-color: transparent;
-	box-shadow: none;
-}
-
-#banner {
-	background: #efeff2;
-	border-color: #efeff2;
-	color: #707070;
+table {
+  width:100%;
+  border-collapse:collapse;
 }
 
 th {
@@ -83,92 +166,253 @@ td {
   }
 }
 
-a {
-	color: #005cae;
-}
-
-nav {
-  width: 10%;
-  min-width: 230px;
-  position: fixed;
-  top: 220px;
-  left:10%;
-  margin-left:0px;
-  text-align: right;
-}
-@media print, screen and (max-width: 1060px) {
-nav {
-	display: block;
-	position: relative;
-	margin-bottom: 50px;
-}
-}
-
-footer {
-  width: 10%;
-  min-width: 230px;
-  position: fixed;
-  bottom: 20px;
-  left:10%;
-  margin-left:0px;
-  text-align: right;
-}
-
-nav ul a {
-	color: #333;
-}
-
-nav ul li.tag-h2 a {
-	font-size: 110%;
-}
-
-nav ul li.tag-h3 a {
-	font-size: 90%;
-}
-
-nav ul li.tag-h3 a:after {
-	content: " «";
-}
-
 hr {
-	background-image: none;
-	border-bottom: 1px solid rgba(#333,0.5);
+  border: 0;
+  outline: none;
+  height: 11px;
+  border-bottom: 1px solid rgba(#333,0.5);
+  margin: 0 0 20px;
+}
+
+dt {
+  color:#444;
+  font-weight:700;
 }
 
 header {
-	background-image: none;
-	background-color: #005cae;
-}
+  padding: 25px 20px 40px 20px;
+  margin: 0;
+  position: fixed;
+  top: 0;
+  left:0;
+  right:0;
+  width: 100%;
+  text-align: center;
+  background: #005cae;
+  box-shadow: 1px 0px 2px rgba(0,0,0,.75);
+  z-index:99;
+  -webkit-font-smoothing:antialiased;
+  min-height: 76px;
 
-#banner .fork {
-	background-color: #ddd;
-	position: initial;
-	color: #333;
-	margin: 7px 10px;
-	margin-right: 20px;
-	float:right;
-}
+  h1 {
+    font: 40px/48px 'Copse', "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: #f3f3f3;
+    text-shadow: 0px 2px 0px #235796;
+    margin: 0px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    -ms-text-overflow: ellipsis;
+  }
 
-#banner .stempel {
-	margin: 7px 10px;
-}
-
-#banner #logo {
-	position: relative;
-	float:right;
-}
-
-#banner .button {
-	border-color: #bbb;
-
-  &:hover {
-    background: linear-gradient(rgba(#005cae,0.6), rgba(#005cae,0.8));
+  p {
+    color: #d8d8d8;
+    text-shadow:rgba(#000, 0.2) 0 1px 0;
+    font-size: 18px;
+    margin: 0px;
   }
 }
 
-.wrapper {
-	width: 80%;
-	min-width: 650px;
+#banner {
+  z-index: 100;
+  left:0;
+  right:50%;
+  height: 50px;
+  margin-right:-382px;
+  position: fixed;
+  top: 115px;
+  background: #efeff2;
+  border: 1px solid #efeff2;
+  box-shadow: 0px 1px 3px rgba(0,0,0,.25);
+  border-radius: 0px 2px 2px 0px;
+  padding-right: 10px;
+
+	color: #707070;
+
+  .button {
+    border: 1px solid #bbb;
+    border-radius: 2px;
+    box-shadow: inset 0px 1px 0px rgba(255,255,255,.4), 0px 1px 1px rgba(0,0,0,.1);
+    background-color: #005cae;
+    margin-left: 5px;
+    padding: 10px 12px;
+    margin-top: 6px;
+    line-height:14px;
+    font-size:14px;
+    color:#333;
+    font-weight: bold;
+    display:inline-block;
+    text-align:center;
+
+    &:hover {
+      background: linear-gradient(rgba(#005cae,0.6), rgba(#005cae,0.8));
+    }
+  }
+
+  .fork {
+    margin-left:-325px;
+    padding: 10px 12px;
+    line-height:14px;
+    font-size:14px;
+
+		background-color: #ddd;
+		color: #333;
+		margin: 7px 10px;
+		margin-right: 20px;
+		float: right;
+  }
+
+	.stempel {
+		margin: 7px 10px;
+	}
+
+  .downloads {
+    float: right;
+    margin:0 45px 0 0;
+
+    span {
+      float:left;
+      line-height:52px;
+      font-size:90%;
+      color:#9d7f0d;
+      text-transform:uppercase;
+      text-shadow:rgba(#fff, 0.2) 0 1px 0;
+    }
+  }
+
+  ul {
+    list-style:none;
+    height:40px;
+    padding:0;
+    float: left;
+    margin-left:10px;
+
+    li {
+      display:inline;
+
+      a.button {
+        background-color: #FFE788;
+      }
+    }
+  }
+
+  #logo {
+    position:relative;
+    float:right;
+    height: 36px;
+    width: 36px;
+    right:7px;
+    top:7px;
+    display: block;
+    background: url(../images/octocat-logo.svg);
+  }
+}
+
+section {
+  margin: 20px 0;
+  margin-top: 190px;
+  border-radius: 3px;
+
+	min-width: 470px;
+	width: auto;
+	display: block;
+	padding: 0 20px;
+	overflow: hidden;
+}
+
+small {
+  font-size:12px;
+}
+
+section ul ul {
+	border-left: 2px dotted #707070;
+	padding-left:20px;
+}
+
+section ul {
+	list-style-type: none;
+	list-style-image: none;
+}
+section ul li:before {
+	content: "» ";
+}
+
+nav {
+  text-align: right;
+
+  width: 230px;
+  float: left;
+
+  ul {
+    list-style: none;
+    list-style-image:none;
+    font-size: 14px;
+    line-height:24px;
+
+    li {
+      padding: 5px 0px;
+      line-height: 16px;
+      // padding-right:17px;
+      // position:relative;
+      // right:-12px;
+
+      &.tag-h1 {
+        font-size: 1.2em;
+
+        a {
+          font-weight: bold;
+          color: #333;
+        }
+
+        + .tag-h2 {
+
+        }
+      }
+
+      &.tag-h2 {
+
+        + .tag-h1 {
+          margin-top:10px;
+        }
+      }
+			&.tag-h2 a {
+				font-size: 110%;
+			}
+
+			&.tag-h3 a {
+				font-size: 90%;
+			}
+
+			&.tag-h3 a:after {
+				content: " «";
+			}
+    }
+
+    a {
+      color: #333;
+
+      &:hover { color: #999; }
+    }
+
+    // .active {
+    //   border-right:solid 4px #39C;
+    //   padding-right:13px;
+    // }
+  }
+}
+
+footer {
+  width:180px;
+  padding-left: 50px;
+  position: sticky;
+  left:0;
+  bottom:20px;
+  text-align: right;
+  line-height: 16px;
+
+  text-align: right;
+  float: left;
 }
 
 .section-block-full {
@@ -179,5 +423,69 @@ header {
 	display: block;
 	width: 45%;
 	min-width: 450px;
-	margin: 2%;
+	margin: 10px;
+}
+
+#head-left {
+	float: left;
+}
+
+#head-right {
+	float: right;
+	max-width: 80%;
+}
+
+@media print, screen and (max-width: 1225px) {
+.wrapper {
+	width: auto;
+	max-width: 1210px;
+	min-width: 470px;
+}
+
+section {
+	border: none;
+	width: auto;
+	min-width: 470px;
+	width: auto;
+	position:initial;
+	display: block;
+	background-color: transparent;
+	box-shadow: none;
+	padding: 0 20px;
+	overflow: hidden;
+}
+nav {
+  width: 230px;
+  float: left;
+  position: initial;
+  margin-left:0px;
+  text-align: right;
+}
+}
+
+
+@media print, screen and (max-width: 755px) {
+nav {
+  width: 450px;
+  float: none;
+  position: initial;
+  margin-left:0px;
+  text-align: right;
+  margin-top: 200px;
+}
+section {
+	margin-top: 10px;
+}
+footer {
+  width:400px;
+  position: relative;
+}
+}
+
+@media print {
+  body {
+    padding:0.4in;
+    font-size:12pt;
+    color:#444;
+  }
 }
