added selectable navigation

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -312,6 +312,7 @@ header {
 section {
   margin: 20px 0;
   margin-top: 190px;
+  margin-left: 230px;
   border-radius: 3px;
 
 	min-width: 470px;
@@ -339,6 +340,7 @@ section ul li:before {
 }
 
 nav {
+  position: fixed;
   text-align: right;
 
   width: 230px;
@@ -426,6 +428,10 @@ footer {
 	margin: 10px;
 }
 
+#navigationbar {
+  overflow: hidden;
+}
+
 #head-left {
 	float: left;
 }
@@ -433,6 +439,22 @@ footer {
 #head-right {
 	float: right;
 	max-width: 80%;
+}
+
+#navigation {
+  overflow: hidden;
+}
+
+#navigation details details {
+  margin-left: 15px;
+}
+
+#navigation details ul {
+  padding-inline-start: 15px;
+}
+
+[class^=select_] {
+  display: inline;
 }
 
 @media print, screen and (max-width: 1225px) {
