--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
 <div id="navbar">
-<a href="/" id="head-left">« go home</a>
+<a href="{{site.baseurl}}/" id="head-left">« go home</a>
 <span id="head-right"><a href="https://github.com/RRZE-HPC/stempel_data_collection/tree/master/stencils/{{page.dimension}}/{{page.radius}}/{{page.weighting}}/{{page.kind}}/{{page.coefficients}}/{{page.datatype}}/{{page.machine}}">{{page.dimension}} / {{page.radius}} / {{page.weighting}} / {{page.kind}} / {{page.coefficients}} / {{page.datatype}} / {{page.machine}}</a></span>
 </div>
