--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -309,6 +309,22 @@ header {
   }
 }
 
+#plot-button {
+    border: 1px solid #bbb;
+    border-radius: 2px;
+    box-shadow: inset 0px 1px 0px rgba(255,255,255,.4), 0px 1px 1px rgba(0,0,0,.1);
+    margin-left: 5px;
+    padding: 10px 12px;
+    margin-top: 6px;
+    line-height:14px;
+    font-size:14px;
+    background-color: #ddd;
+    color: #333;
+    font-weight: bold;
+    display:inline-block;
+    text-align:center;
+}
+
 section {
   margin: 20px 0;
   margin-top: 190px;
