--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -310,19 +310,19 @@ header {
 }
 
 #plot-button {
-    border: 1px solid #bbb;
-    border-radius: 2px;
-    box-shadow: inset 0px 1px 0px rgba(255,255,255,.4), 0px 1px 1px rgba(0,0,0,.1);
-    margin-left: 5px;
-    padding: 10px 12px;
-    margin-top: 6px;
-    line-height:14px;
-    font-size:14px;
-    background-color: #ddd;
-    color: #333;
-    font-weight: bold;
-    display:inline-block;
-    text-align:center;
+  border: 1px solid #bbb;
+  border-radius: 2px;
+  box-shadow: inset 0px 1px 0px rgba(255,255,255,.4), 0px 1px 1px rgba(0,0,0,.1);
+  margin-left: 5px;
+  padding: 10px 12px;
+  margin-top: 6px;
+  line-height:14px;
+  font-size:14px;
+  background-color: #ddd;
+  color: #333;
+  font-weight: bold;
+  display:inline-block;
+  text-align:center;
 }
 
 section {
@@ -446,6 +446,25 @@ footer {
 
 #navigationbar {
   overflow: hidden;
+}
+
+#navigation select {
+  border: 1px solid #bbb;
+  border-radius: 2px;
+  box-shadow: inset 0px 1px 0px rgba(255,255,255,.4), 0px 1px 1px rgba(0,0,0,.1);
+  padding: 4px 8px;
+  margin-top: 5px;
+  line-height:14px;
+  font-size:14px;
+  background-color: #ddd;
+  color: #333;
+  font-weight: bold;
+  display:inline-block;
+  text-align:center;
+}
+.nav-selection {
+  float: left;
+  padding: 2px 5px;
 }
 
 #head-left {
