testing hover info in plots

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -496,6 +496,12 @@ footer {
   display: inline;
 }
 
+#ecm_LC, #ecm_CS,
+#rfl_LC, #rfl_CS,
+#mem_LC, #mem_CS {
+  width:100%;
+}
+
 @media print, screen and (max-width: 1225px) {
 .wrapper {
 	width: auto;
