Added thread scaling and blocking to the stencil pages, they will only be shown, if data is present

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -498,7 +498,8 @@ footer {
 
 #ecm_LC, #ecm_CS,
 #rfl_LC, #rfl_CS,
-#mem_LC, #mem_CS {
+#mem_LC, #mem_CS,
+.blocking, .scaling {
   width:100%;
 }
 
