fix issues with button text (not) updating

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,7 +6,6 @@ Original:
 Leap Day for GitHub Pages
 by Matt Graham
 */
-
 @import "normalize";
 @import "fonts";
 @import "rouge-base16-dark";
@@ -19,6 +18,7 @@ by Matt Graham
   src: local('Source Code Pro'), local('SourceCodePro-Regular'), url(https://fonts.gstatic.com/s/sourcecodepro/v7/HI_SiYsKILxRpg3hIP6sJ7fM7PqlM-vWjMY.woff2) format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
+
 /* latin */
 @font-face {
   font-family: 'Source Code Pro';
@@ -29,41 +29,40 @@ by Matt Graham
 }
 
 body {
-  font:14px/22px;
-  font-weight:300;
+  font: 14px/22px;
+  font-weight: 300;
   margin: 0px;
-  padding:0px 0 20px 0px;
-
-	font-family:  "Helvetica Neue", Helvetica, Arial, sans-serif;
-	background: #fff;
-	color: #222;
-	background-image: none;
+  padding: 0px 0 20px 0px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background: #fff;
+  color: #222;
+  background-image: none;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color:#333;
-  margin:0 0 10px;
+  color: #333;
+  margin: 0 0 10px;
 }
 
 p, ul, ol, table, pre, dl {
-  margin:0 0 20px;
+  margin: 0 0 20px;
 }
 
 h1, h2, h3 {
-  line-height:1.1;
+  line-height: 1.1;
 }
 
 h1 {
-  font-size:28px;
+  font-size: 28px;
 }
 
 h2 {
   font-size: 24px;
-  color:#393939;
+  color: #393939;
 }
 
 h3, h4, h5, h6 {
-  color:#666666;
+  color: #666666;
 }
 
 h3 {
@@ -72,20 +71,20 @@ h3 {
 }
 
 a {
-  color:#005cae;
-  font-weight:400;
-  text-decoration:none;
+  color: #005cae;
+  font-weight: 400;
+  text-decoration: none;
 }
 
 a small {
-  font-size:11px;
-  color:#666;
-  margin-top:-0.6em;
-  display:block;
+  font-size: 11px;
+  color: #666;
+  margin-top: -0.6em;
+  display: block;
 }
 
-ul{
-  list-style-image:url('../images/bullet.png');
+ul {
+  list-style-image: url('../images/bullet.png');
 }
 
 strong {
@@ -94,11 +93,11 @@ strong {
 }
 
 .wrapper {
-	width: auto;
-	max-width: 1500px;
-	min-width: 470px;
-  margin:0 auto;
-  position:relative;
+  width: auto;
+  max-width: 1500px;
+  min-width: 470px;
+  margin: 0 auto;
+  position: relative;
 }
 
 section img {
@@ -106,16 +105,16 @@ section img {
 }
 
 blockquote {
-  border-left:1px solid #ffcc00;
-  margin:0;
-  padding:0 0 0 20px;
-  font-style:italic;
+  border-left: 1px solid #ffcc00;
+  margin: 0;
+  padding: 0 0 0 20px;
+  font-style: italic;
 }
 
 code {
   font-family: Source Code Pro, 'Lucida Sans', Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-  font-size:13px;
-  color:#efefef;
+  font-size: 13px;
+  color: #efefef;
   text-shadow: 0px 1px 0px #000;
   margin: 0 4px;
   padding: 2px 6px;
@@ -124,10 +123,10 @@ code {
 }
 
 pre {
-  padding:8px 15px;
+  padding: 8px 15px;
   background: #333333;
   border-radius: 3px;
-  border:1px solid #c7c7c7;
+  border: 1px solid #c7c7c7;
   overflow: auto;
   overflow-y: hidden;
 
@@ -135,26 +134,27 @@ pre {
     margin: 0px;
     padding: 0px;
   }
+
 }
 
 table {
-  width:100%;
-  border-collapse:collapse;
+  width: 100%;
+  border-collapse: collapse;
 }
 
 th {
-  text-align:left;
-  padding:5px 10px;
-  border-bottom:1px solid #e5e5e5;
+  text-align: left;
+  padding: 5px 10px;
+  border-bottom: 1px solid #e5e5e5;
   color: #aaa;
   font-weight: normal;
   font-style: italic;
 }
 
 td {
-  text-align:left;
-  padding:5px 10px;
-  border-bottom:1px solid #e5e5e5;
+  text-align: left;
+  padding: 5px 10px;
+  border-bottom: 1px solid #e5e5e5;
   border-right: 1px solid #e5e5e5;
 
   &:first-child {
@@ -162,21 +162,22 @@ td {
   }
 
   &:nth-child(2) {
-	  font-weight: bold;
+    font-weight: bold;
   }
+
 }
 
 hr {
   border: 0;
   outline: none;
   height: 11px;
-  border-bottom: 1px solid rgba(#333,0.5);
+  border-bottom: 1px solid rgba(#333, 0.5);
   margin: 0 0 20px;
 }
 
 dt {
-  color:#444;
-  font-weight:700;
+  color: #444;
+  font-weight: 700;
 }
 
 header {
@@ -184,14 +185,14 @@ header {
   margin: 0;
   position: fixed;
   top: 0;
-  left:0;
-  right:0;
+  left: 0;
+  right: 0;
   width: 100%;
   text-align: center;
   background: #005cae;
-  box-shadow: 1px 0px 2px rgba(0,0,0,.75);
-  z-index:99;
-  -webkit-font-smoothing:antialiased;
+  box-shadow: 1px 0px 2px rgba(0, 0, 0, .75);
+  z-index: 99;
+  -webkit-font-smoothing: antialiased;
   min-height: 76px;
 
   h1 {
@@ -208,121 +209,125 @@ header {
 
   p {
     color: #d8d8d8;
-    text-shadow:rgba(#000, 0.2) 0 1px 0;
+    text-shadow: rgba(#000, 0.2) 0 1px 0;
     font-size: 18px;
     margin: 0px;
   }
+
 }
 
 #banner {
   z-index: 100;
-  left:0;
-  right:50%;
+  left: 0;
+  right: 50%;
   height: 50px;
-  margin-right:-382px;
+  margin-right: -382px;
   position: fixed;
   top: 115px;
   background: #efeff2;
   border: 1px solid #efeff2;
-  box-shadow: 0px 1px 3px rgba(0,0,0,.25);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, .25);
   border-radius: 0px 2px 2px 0px;
   padding-right: 10px;
-
-	color: #707070;
+  color: #707070;
 
   .button {
     border: 1px solid #bbb;
     border-radius: 2px;
-    box-shadow: inset 0px 1px 0px rgba(255,255,255,.4), 0px 1px 1px rgba(0,0,0,.1);
+    box-shadow: inset 0px 1px 0px rgba(255, 255, 255, .4), 0px 1px 1px rgba(0, 0, 0, .1);
     background-color: #005cae;
     margin-left: 5px;
     padding: 10px 12px;
     margin-top: 6px;
-    line-height:14px;
-    font-size:14px;
-    color:#333;
+    line-height: 14px;
+    font-size: 14px;
+    color: #333;
     font-weight: bold;
-    display:inline-block;
-    text-align:center;
+    display: inline-block;
+    text-align: center;
 
     &:hover {
-      background: linear-gradient(rgba(#005cae,0.6), rgba(#005cae,0.8));
+      background: linear-gradient(rgba(#005cae, 0.6), rgba(#005cae, 0.8));
     }
+
   }
 
   .fork {
-    margin-left:-325px;
+    margin-left: -325px;
     padding: 10px 12px;
-    line-height:14px;
-    font-size:14px;
-
-		background-color: #ddd;
-		color: #333;
-		margin: 7px 10px;
-		margin-right: 20px;
-		float: right;
+    line-height: 14px;
+    font-size: 14px;
+    background-color: #ddd;
+    color: #333;
+    margin: 7px 10px;
+    margin-right: 20px;
+    float: right;
   }
 
-	.stempel {
-		margin: 7px 10px;
-	}
+  .stempel {
+    margin: 7px 10px;
+  }
 
   .downloads {
     float: right;
-    margin:0 45px 0 0;
+    margin: 0 45px 0 0;
 
     span {
-      float:left;
-      line-height:52px;
-      font-size:90%;
-      color:#9d7f0d;
-      text-transform:uppercase;
-      text-shadow:rgba(#fff, 0.2) 0 1px 0;
+      float: left;
+      line-height: 52px;
+      font-size: 90%;
+      color: #9d7f0d;
+      text-transform: uppercase;
+      text-shadow: rgba(#fff, 0.2) 0 1px 0;
     }
+
   }
 
   ul {
-    list-style:none;
-    height:40px;
-    padding:0;
+    list-style: none;
+    height: 40px;
+    padding: 0;
     float: left;
-    margin-left:10px;
+    margin-left: 10px;
 
     li {
-      display:inline;
+      display: inline;
 
       a.button {
         background-color: #FFE788;
       }
+
     }
+
   }
 
   #logo {
-    position:relative;
-    float:right;
+    position: relative;
+    float: right;
     height: 36px;
     width: 36px;
-    right:7px;
-    top:7px;
+    right: 7px;
+    top: 7px;
     display: block;
     background: url(../images/octocat-logo.svg);
   }
+
 }
 
-#plot-button {
+#plot-button, .code-button {
   border: 1px solid #bbb;
   border-radius: 2px;
-  box-shadow: inset 0px 1px 0px rgba(255,255,255,.4), 0px 1px 1px rgba(0,0,0,.1);
+  box-shadow: inset 0px 1px 0px rgba(255, 255, 255, .4), 0px 1px 1px rgba(0, 0, 0, .1);
   margin-left: 5px;
   padding: 10px 12px;
   margin-top: 6px;
-  line-height:14px;
-  font-size:14px;
+  line-height: 14px;
+  font-size: 14px;
   background-color: #ddd;
   color: #333;
   font-weight: bold;
-  display:inline-block;
-  text-align:center;
+  display: inline-block;
+  text-align: center;
 }
 
 section {
@@ -330,50 +335,49 @@ section {
   margin-top: 190px;
   margin-left: 230px;
   border-radius: 3px;
-
-	min-width: 470px;
-	width: auto;
-	display: block;
-	padding: 0 20px;
-	overflow: hidden;
+  min-width: 470px;
+  width: auto;
+  display: block;
+  padding: 0 20px;
+  overflow: hidden;
 }
 
 small {
-  font-size:12px;
+  font-size: 12px;
 }
 
 section ul ul {
-	border-left: 2px dotted #707070;
-	padding-left:20px;
+  border-left: 2px dotted #707070;
+  padding-left: 20px;
 }
 
 section ul {
-	list-style-type: none;
-	list-style-image: none;
+  list-style-type: none;
+  list-style-image: none;
 }
+
 section ul li:before {
-	content: "» ";
+  content: "» ";
 }
 
 nav {
   position: fixed;
   text-align: right;
-
   width: 230px;
   float: left;
 
   ul {
     list-style: none;
-    list-style-image:none;
+    list-style-image: none;
     font-size: 14px;
-    line-height:24px;
+    line-height: 24px;
 
     li {
       padding: 5px 0px;
       line-height: 16px;
-      // padding-right:17px;
-      // position:relative;
-      // right:-12px;
+      // padding-right: 17px;
+      // position: relative;
+      // right: -12px;
 
       &.tag-h1 {
         font-size: 1.2em;
@@ -384,64 +388,66 @@ nav {
         }
 
         + .tag-h2 {
-
         }
+
       }
 
       &.tag-h2 {
-
         + .tag-h1 {
-          margin-top:10px;
+          margin-top: 10px;
         }
+
       }
-			&.tag-h2 a {
-				font-size: 110%;
-			}
 
-			&.tag-h3 a {
-				font-size: 90%;
-			}
+      &.tag-h2 a {
+        font-size: 110%;
+      }
 
-			&.tag-h3 a:after {
-				content: " «";
-			}
+      &.tag-h3 a {
+        font-size: 90%;
+      }
+
+      &.tag-h3 a:after {
+        content: " «";
+      }
+
     }
 
     a {
       color: #333;
 
-      &:hover { color: #999; }
+      &:hover {
+        color: #999;
+      }
+
     }
 
-    // .active {
-    //   border-right:solid 4px #39C;
-    //   padding-right:13px;
-    // }
   }
+
 }
 
 footer {
-  width:180px;
+  width: 180px;
   padding-left: 50px;
   position: sticky;
-  left:0;
-  bottom:20px;
+  left: 0;
+  bottom: 20px;
   text-align: right;
   line-height: 16px;
-
   text-align: right;
   float: left;
 }
 
 .section-block-full {
-	overflow:hidden;
+  overflow: hidden;
 }
+
 .section-block-half {
-	float: left;
-	display: block;
-	width: 45%;
-	min-width: 450px;
-	margin: 10px;
+  float: left;
+  display: block;
+  width: 45%;
+  min-width: 450px;
+  margin: 10px;
 }
 
 #navigationbar {
@@ -451,29 +457,30 @@ footer {
 #navigation select {
   border: 1px solid #bbb;
   border-radius: 2px;
-  box-shadow: inset 0px 1px 0px rgba(255,255,255,.4), 0px 1px 1px rgba(0,0,0,.1);
+  box-shadow: inset 0px 1px 0px rgba(255, 255, 255, .4), 0px 1px 1px rgba(0, 0, 0, .1);
   padding: 4px 8px;
   margin-top: 5px;
-  line-height:14px;
-  font-size:14px;
+  line-height: 14px;
+  font-size: 14px;
   background-color: #ddd;
   color: #333;
   font-weight: bold;
-  display:inline-block;
-  text-align:center;
+  display: inline-block;
+  text-align: center;
 }
+
 .nav-selection {
   float: left;
   padding: 2px 5px;
 }
 
 #head-left {
-	float: left;
+  float: left;
 }
 
 #head-right {
-	float: right;
-	max-width: 80%;
+  float: right;
+  max-width: 80%;
 }
 
 #navbar {
@@ -496,64 +503,66 @@ footer {
   display: inline;
 }
 
-#ecm_LC, #ecm_CS,
-#rfl_LC, #rfl_CS,
-#mem_LC, #mem_CS,
-.blocking, .scaling {
-  width:100%;
+#ecm_LC, #ecm_CS, #rfl_LC, #rfl_CS, #mem_LC, #mem_CS, .blocking, .scaling {
+  width: 100%;
 }
 
-@media print, screen and (max-width: 1225px) {
-.wrapper {
-	width: auto;
-	max-width: 1210px;
-	min-width: 470px;
+@media print, screen and (max-width:1225px) {
+  .wrapper {
+    width: auto;
+    max-width: 1210px;
+    min-width: 470px;
+  }
+
+  section {
+    border: none;
+    width: auto;
+    min-width: 470px;
+    width: auto;
+    position: initial;
+    display: block;
+    background-color: transparent;
+    box-shadow: none;
+    padding: 0 20px;
+    overflow: hidden;
+  }
+
+  nav {
+    width: 230px;
+    float: left;
+    position: initial;
+    margin-left: 0px;
+    text-align: right;
+  }
+
 }
 
-section {
-	border: none;
-	width: auto;
-	min-width: 470px;
-	width: auto;
-	position:initial;
-	display: block;
-	background-color: transparent;
-	box-shadow: none;
-	padding: 0 20px;
-	overflow: hidden;
-}
-nav {
-  width: 230px;
-  float: left;
-  position: initial;
-  margin-left:0px;
-  text-align: right;
-}
-}
+@media print, screen and (max-width:755px) {
+  nav {
+    width: 450px;
+    float: none;
+    position: initial;
+    margin-left: 0px;
+    text-align: right;
+    margin-top: 200px;
+  }
 
+  section {
+    margin-top: 10px;
+  }
 
-@media print, screen and (max-width: 755px) {
-nav {
-  width: 450px;
-  float: none;
-  position: initial;
-  margin-left:0px;
-  text-align: right;
-  margin-top: 200px;
-}
-section {
-	margin-top: 10px;
-}
-footer {
-  width:400px;
-  position: relative;
-}
+  footer {
+    width: 400px;
+    position: relative;
+  }
+
 }
 
 @media print {
   body {
-    padding:0.4in;
-    font-size:12pt;
-    color:#444;
+    padding: 0.4in;
+    font-size: 12pt;
+    color: #444;
   }
+
 }
