fix wrong highlighting in asm code

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -469,6 +469,11 @@ footer {
   text-align: center;
 }
 
+.highlight .err {
+    color: #efefef;
+    background-color: transparent;
+}
+
 .nav-selection {
   float: left;
   padding: 2px 5px;
