--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -85,6 +85,7 @@ a small {
 
 ul {
   list-style-image: url('../images/bullet.png');
+  padding-left: 20px;
 }
 
 strong {
@@ -112,7 +113,6 @@ blockquote {
 
   p {
     margin: 0 !important;
-    text-align: justify;
     padding: 5px 0;
   }
 
@@ -122,6 +122,7 @@ blockquote {
 
   .comment {
     font-size: 120%;
+    line-height: 120%;
     padding: 5px 5%;
   }
 
